--- a/Frontend/JavaScript/index.html
+++ b/Frontend/JavaScript/index.html
@@ -6,7 +6,9 @@
     <title>popcorn</title>
 </head>
 <body>
-    <h1>Welcome to Popcorn Shop..</h1>
-    <script src="Popcorn.js"></script>
+    <!-- <h1>Welcome to Popcorn Shop..</h1> -->
+     <h1>Nested If-Else</h1>
+    <!-- <script src="Popcorn.js"></script> -->
+     <script src="Nested-if-else.js"></script>
 </body>
 </html>
