--- a/Frontend/JavaScript/index.html
+++ b/Frontend/JavaScript/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>popcorn</title>
+    <title>Good String</title>
 </head>
 <body>
     <!-- <h1>Welcome to Popcorn Shop..</h1> -->
-     <h1>Nested If-Else</h1>
+     <!-- <h1>Nested If-Else</h1> -->
+    <h1>A good stringis a string that start with a and length > 3</h1>
     <!-- <script src="Popcorn.js"></script> -->
-     <script src="Nested-if-else.js"></script>
+     <!-- <script src="Nested-if-else.js"></script> -->
+    <script src="GoodString.js"></script>
 </body>
 </html>
