--- a/Frontend/JavaScript/index.html
+++ b/Frontend/JavaScript/index.html
@@ -8,9 +8,12 @@
 <body>
     <!-- <h1>Welcome to Popcorn Shop..</h1> -->
      <!-- <h1>Nested If-Else</h1> -->
-    <h1>A good stringis a string that start with a and length > 3</h1>
+    <!-- <h1>A good stringis a string that start with a and length > 3</h1> -->
+     <h1>Practice</h1>
     <!-- <script src="Popcorn.js"></script> -->
      <!-- <script src="Nested-if-else.js"></script> -->
-    <script src="GoodString.js"></script>
+    <!-- <script src="GoodString.js"></script> -->
+
+    <script src="practice.js"></script>
 </body>
 </html>
