--- a/Frontend/JavaScript/index.html
+++ b/Frontend/JavaScript/index.html
@@ -14,6 +14,8 @@
      <!-- <script src="Nested-if-else.js"></script> -->
     <!-- <script src="GoodString.js"></script> -->
 
-    <script src="practice.js"></script>
+    <!-- <script src="practice.js"></script> -->
+
+    <script src="Array.js"></script>
 </body>
 </html>
