practice set of array&string

--- a/Frontend/JavaScript/index.html
+++ b/Frontend/JavaScript/index.html
@@ -16,6 +16,7 @@
 
     <!-- <script src="practice.js"></script> -->
 
-    <script src="Array.js"></script>
+    <!-- <script src="Array.js"></script> -->
+     <script src="practiceArray.js"></script>
 </body>
 </html>
