--- a/Frontend/JavaScript/index.html
+++ b/Frontend/JavaScript/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="practice.js"></script> -->
 
     <!-- <script src="Array.js"></script> -->
-     <script src="practiceArray.js"></script>
+     <!-- <script src="practiceArray.js"></script> -->
+    <script src="ArrowFunction.js"></script>
 </body>
 </html>
