Random color Generator Activity

--- a/Frontend/JavaScript/index.html
+++ b/Frontend/JavaScript/index.html
@@ -18,6 +18,7 @@
 
     <!-- <script src="Array.js"></script> -->
      <!-- <script src="practiceArray.js"></script> -->
-    <script src="ArrowFunction.js"></script>
+    <!-- <script src="ArrowFunction.js"></script> -->
+    <script src="practiceset8.js"></script>
 </body>
 </html>
