--- a/Frontend/JavaScript/index.html
+++ b/Frontend/JavaScript/index.html
@@ -6,6 +6,8 @@
     <title>Good String</title>
 </head>
 <body>
+    <input placeholder="type something">
+    
     <!-- <h1>Welcome to Popcorn Shop..</h1> -->
      <!-- <h1>Nested If-Else</h1> -->
     <!-- <h1>A good stringis a string that start with a and length > 3</h1> -->
@@ -19,6 +21,7 @@
     <!-- <script src="Array.js"></script> -->
      <!-- <script src="practiceArray.js"></script> -->
     <!-- <script src="ArrowFunction.js"></script> -->
-    <script src="practiceset8.js"></script>
+    <!-- <script src="practiceset8.js"></script> -->
+     <script src="KeyEvent.js"></script>
 </body>
 </html>
