--- a/Frontend/JavaScript/index.html
+++ b/Frontend/JavaScript/index.html
@@ -6,7 +6,13 @@
     <title>Good String</title>
 </head>
 <body>
-    <input placeholder="type something">
+<form action="/action">
+    <input type="text" placeholder="username" id="user">
+    <input type="text" placeholder="password" id="pass">
+    <button type="submit">Submit</button>
+</form>
+
+    <!-- <input placeholder="type something"> -->
     
     <!-- <h1>Welcome to Popcorn Shop..</h1> -->
      <!-- <h1>Nested If-Else</h1> -->
@@ -22,6 +28,7 @@
      <!-- <script src="practiceArray.js"></script> -->
     <!-- <script src="ArrowFunction.js"></script> -->
     <!-- <script src="practiceset8.js"></script> -->
-     <script src="KeyEvent.js"></script>
+     <!-- <script src="KeyEvent.js"></script> -->
+      <script src="ExtractingFormData.js"></script>
 </body>
 </html>
